--- a/style.css
+++ b/style.css
@@ -1,6 +1,74 @@
-:root{
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
+*{
+    box-sizing: border-box;
+    margin: 0rem;
+    padding: 0rem;
+}
+
+:root {
     --global--predef--white: hsl(0, 0%, 100%);
     --global--predef--lightGray: hsl(212, 45%, 89%);
     --global--predef--grayishBlue: hsl(220, 15%, 55%);
     --global--predef--darkBlue: hsl(218, 44%, 22%);
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction:column;
+    
+    background-color: var(--global--predef--lightGray);
+    
+    height: calc(100vh - 1px);
+    margin: 1.25rem;
+    
+    
+
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+ 
+}
+
+.container {
+    background-color: var(--global--predef--white);
+    box-shadow: 5px 5px 5px rgba(0,0,0, 0.15);
+
+    border-radius: 0.625rem;
+
+    margin: 0 0 2rem 0;
+    padding: 1.25rem;
+    
+}
+
+.QR {
+    max-width: 100%;
+    border-radius: 0.625rem;
+    margin: 0 0 1rem 0;
+}
+
+.container h1{
+    color: var(--global--predef--darkBlue);
+    text-align: center;
+}
+
+.container p{
+    color: var(--global--predef--grayishBlue);
+    text-align: center;
+}
+
+.attribution {
+     font-size: 11px; 
+     text-align: center; 
+    }
+
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+
+@media (min-width: 500px){
+    .container{
+        width: 400px;
+    }
 }
